feat: Jobs & FAQ public API with Swagger docs
